# Makefile.am for the SDL sample mixer library and players

lib_LTLIBRARIES = libSDL_mixer.la

SUBDIRS = @MUSIC_SUBDIRS@
DIST_SUBIDRS = mikmod timidity

libSDL_mixerincludedir = $(includedir)/SDL
libSDL_mixerinclude_HEADERS =	\
	SDL_mixer.h

libSDL_mixer_la_SOURCES =	\
	mixer.c			\
	music.c			\
	music_cmd.c		\
	music_cmd.h		\
	music_ogg.c		\
	music_ogg.h		\
	wave.h			\
	wavestream.c		\
	wavestream.h

if USE_MIKMOD
MIKMOD_LIB = mikmod/libmikmod.la
else
MIKMOD_LIB =
endif
if USE_TIMIDITY
TIMIDITY_LIB = timidity/libtimidity.la
else
TIMIDITY_LIB =
endif

EXTRA_DIST =			\
	CHANGES			\
	VisualC.zip		\
	MPWmake.sea.bin		\
	CWprojects.sea.hqx	\
	autogen.sh

libSDL_mixer_la_LDFLAGS = 		\
        -release $(LT_RELEASE)	\
	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
libSDL_mixer_la_LIBADD = $(MIKMOD_LIB) $(TIMIDITY_LIB)

bin_PROGRAMS = playwave playmus

playwave_LDADD = libSDL_mixer.la
playmus_LDADD = libSDL_mixer.la

# Rule to build tar-gzipped distribution package
$(PACKAGE)-$(VERSION).tar.gz: dist

# Rule to build RPM distribution package
rpm: $(PACKAGE)-$(VERSION).tar.gz
	cp $(PACKAGE)-$(VERSION).tar.gz /usr/src/redhat/SOURCES
	rpm -ba $(PACKAGE).spec

