
noinst_LTLIBRARIES = libmikmod.la

libmikmod_la_SOURCES =		\
	drv_nos.c		\
	drv_sdl.c		\
	load_it.c		\
	load_mod.c		\
	load_s3m.c		\
	load_xm.c		\
	mdreg.c			\
	mdriver.c		\
	mikmod.h		\
	mloader.c		\
	mlreg.c			\
	mmalloc.c		\
	mmerror.c		\
	mmio.c			\
	mmio.h			\
	mplayer.c		\
	munitrk.c		\
	npertab.c		\
	ptform.h		\
	s3m_it.c		\
	sloader.c		\
	tdefs.h			\
	virtch.c

EXTRA_DIST = README license.txt
