
noinst_LTLIBRARIES = libtimidity.la

libtimidity_la_SOURCES =	\
	common.c		\
	common.h		\
	config.h		\
	controls.c		\
	controls.h		\
	filter.c		\
	filter.h		\
	instrum.c		\
	instrum.h		\
	mix.c			\
	mix.h			\
	output.c		\
	output.h		\
	playmidi.c		\
	playmidi.h		\
	readmidi.c		\
	readmidi.h		\
	resample.c		\
	resample.h		\
	sdl_a.c			\
	sdl_c.c			\
	tables.c		\
	tables.h		\
	timidity.c		\
	timidity.h

EXTRA_DIST = FAQ README
